--- a/config/doing.toml
+++ b/config/doing.toml
@@ -1,19 +1,14 @@
 [[doing]]
-title = "Mobile Apps"
-icon = "./config/assets/icons/mobile.svg"
-text = "Professional development of applications for iOS and Android."
+title = "Machine Learning"
+icon = "./config/assets/icons/ml.svg"
+text = "Machine learning and deep learning models for various tasks."
 
 [[doing]]
-title = "Scripting"
-icon = "./config/assets/icons/code.svg"
-text = "Automation and task scripting using Python to enhance efficiency and productivity."
+title = "Computer Vision"
+icon = "./config/assets/icons/vision.svg"
+text = "Point cloud processing, image processing, and data analysis."
 
 [[doing]]
-title = "UI/UX Designing"
-icon = "./config/assets/icons/compass.svg"
-text = "Intuitive and visually appealing user interfaces and user experiences."
-
-[[doing]]
-title = "Web Development"
-icon = "./config/assets/icons/laptop-code.svg"
-text = "High-quality development of sites at the professional level."
+title = "Embedded Systems"
+icon = "./config/assets/icons/embedded.svg"
+text = "Development of embedded systems for various tasks (FPGA, AVR)."
