--- a/config/resume.toml
+++ b/config/resume.toml
@@ -1,37 +1,22 @@
 ############## Education config #################
 #################################################
 [[education]]
-title = "High school of art and design"
-timeline = "2002 — 2004"
-description = "Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur magni dolores eos."
+title = "University of Guanajuato (ENMS SALAMANCA)"
+timeline = "2015 — 2018"
+description = "High school studies in the are of mechatronics technician (KOSEN like system)."
 
 [[education]]
-title = "New york academy of art"
-timeline = "2006 — 2007"
-description = "Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est omnis.."
-
-[[education]]
-title = "University school of the arts"
-timeline = "2007 — 2008"
-description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
+title = "University of Guanajuato (DICIS UGTO)"
+timeline = "2018 — Present"
+description = "Bachelor's degree in Mechatronics Engineering."
 
 
 ############## Experience config ################
 #################################################
-[[experience]]
-title = "Web designer"
-timeline = "2010 — 2013"
-description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
-
-[[experience]]
-title = "Art director"
-timeline = "2013 — 2015"
-description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
-
-[[experience]]
-title = "Creative director"
-timeline = "2015 — Present"
-description = "Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas molestias exceptur."
+# [[experience]]
+# title = "Web designer"
+# timeline = "2010 — 2013"
+# description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
 
 
 ############## Skills config ####################
@@ -43,20 +28,20 @@ show_bar = true
 show_value = true
 
 [[skill]]
-title = "Web design"
+title = "Arduino Programming"
 value = "80%"
 
 [[skill]]
-title = "Graphic design"
-value = "70%"
+title = "FPGA Programming"
+value = "40%"
 
 [[skill]]
-title = "Branding"
-value = "90%"
-
-[[skill]]
-title = "WordPress"
+title = "Image Processing"
 value = "50%"
+
+[[skill]]
+title = "Web Development"
+value = "30%"
 
 ############## Language config ##################
 #################################################
@@ -67,9 +52,13 @@ show_bar = true
 show_value = true
 
 [[language]]
-title = "Ingles"
+title = "Spanish"
+value = "Native"
+
+[[language]]
+title = "English"
 value = "60%"
 
 [[language]]
-title = "French"
-value = "50%"
+title = "Japanese"
+value = "10%"
