--- a/config/technologies.toml
+++ b/config/technologies.toml
@@ -8,13 +8,14 @@ enabled = true # false
 # Technology I have worked with
 # name = "./.../../icon_path"
 [technologies]
+git = "./config/assets/icons/git.svg"
 c = "./config/assets/icons/c.svg"
 cpp = "./config/assets/icons/cpp.svg"
 vhdl = "./config/assets/icons/vhdl.svg"
 arduino = "./config/assets/icons/arduino.svg"
 python = "./config/assets/icons/python.svg"
+numpy = "./config/assets/icons/numpy.svg"
 jupyter = "./config/assets/icons/jupyter.svg"
-git = "./config/assets/icons/git.svg"
 pandas = "./config/assets/icons/pandas.svg"
 html = "./config/assets/icons/html.svg"
 css = "./config/assets/icons/css.svg"
