--- a/config/blog.toml
+++ b/config/blog.toml
@@ -1,15 +1,15 @@
-[[post]]
-category = "Design"
-title = "Design conferences in 2022"
-subtitle = "Veritatis et quasi architecto beatae vitae dicta sunt, explicabo."
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-1.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
+# [[post]]
+# category = "Design"
+# title = "Design conferences in 2022"
+# subtitle = "Veritatis et quasi architecto beatae vitae dicta sunt, explicabo."
+# datetime = "2022-02-23"
+# image = "./config/assets/posts/blog-1.jpg"
+# url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
 
-[[post]]
-category = "Design"
-title = "Best fonts every designer"
-subtitle = "Sed ut perspiciatis, nam libero tempore, cum soluta nobis est eligendi"
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-2.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
+# [[post]]
+# category = "Design"
+# title = "Best fonts every designer"
+# subtitle = "Sed ut perspiciatis, nam libero tempore, cum soluta nobis est eligendi"
+# datetime = "2022-02-23"
+# image = "./config/assets/posts/blog-2.jpg"
+# url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
